--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,8 @@
 <h1 class="text-6xl font-bold text-yellow-500">
     Projet tailwind
 </h1>
+<div class="w-72 h-72 bg-amber-600">
+    <p class="text-blue-500">Salut les gars !</p>
+</div>
 </body>
 </html>
