--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,58 @@
     <title>Document</title>
 </head>
 <body>
-<h1 class="text-6xl font-bold text-yellow-500">
-    Projet tailwind
-</h1>
-<div class="w-72 h-72 bg-amber-600">
-    <p class="text-blue-500">Salut les gars !</p>
-</div>
+<section id="content" class="bg-gray-100">
+    <div class="container mx-auto grid md:grid-cols-2 py-40 px-60 border border-amber-500">
+        <div class="pt-20">
+            <img src="images/facebook-logo.svg">
+            <h2 class="text-3xl">Avec Facebook, partagez et restez en contact avec votre entourage.</h2>
+        </div>
+        <div>
+            <div class="shadow-lg bg-white p-10 rounded-xl">
+                <form>
+                    <input type="text" class="block border-2 w-full p-3 text-lg rounded-md mb-5" placeholder="Adresse e-email ou numéro de tél."/>
+                    <input type="password" class="block border-2 w-full p-3 text-lg rounded-md mb-5" placeholder="Mot de passe"/>
+                    <input type="submit" class="block w-full rounded-md text-lg font-bold p-3 bg-blue-500 text-white" value="Se connecter">
+                </form>
+                <a href="#" class="block my-5 text-center text-md text-blue-600">Mot de passe oublié ?</a>
+                <hr class="mb-10">
+                <div class="text-center">
+                    <a href="#" class="rounded-md text-lg font-bold p-3 bg-green-500 text-white">Créer un nouveau compte</a>
+                </div>
+
+            </div>
+            <div class="text-center text-md mt-5">
+                <p><a href="#" class="font-bold">Créer une page</a>  pour une célébrité, une marque ou une entreprise.</p>
+            </div>
+        </div>
+    </div>
+</section>
+<footer class="bg-white">
+    <div class="container mx-auto py-10 px-60">
+        <div>
+            <ul class="flex flex-wrap gap-3 text-gray-600">
+                <li><a href="" class="inline-block text-gray-700 hover:underline">English (US)</a></li>
+                <li><a href="" class="inline-block hover:underline">Español</a></li>
+                <li><a href="" class="inline-block hover:underline">Français (France)</a></li>
+                <li><a href="" class="inline-block hover:underline">中文(简体)</a></li>
+                <li><a href="" class="inline-block hover:underline">Português (Brasil)</a></li>
+                <li><a href="" class="inline-block hover:underline">Italiano</a></li>
+                <li><a href="" class="inline-block hover:underline">한국어</a></li>
+                <li><a href="" class="inline-block hover:underline">Deutsch</a></li>
+                <li><a href="" class="inline-block hover:underline">हिन्दी</a></li>
+                <li><a href="" class="inline-block hover:underline">日本語</a></li>
+            </ul>
+            <hr class="my-2">
+            <ul class="flex flex-wrap gap-3 text-gray-600">
+                <li><a href="#" class="inline-block hover:underline">S'inscrire</a></li>
+                <li><a href="#" class="inline-block hover:underline">Se connecter</a></li>
+                <li><a href="#" class="inline-block hover:underline">Messenger</a></li>
+                <li><a href="#" class="inline-block hover:underline">Facebook Lite</a></li>
+                <li><a href="#" class="inline-block hover:underline">Videos</a></li>
+                <li><a href="#" class="inline-block hover:underline">Lieux</a></li>
+            </ul>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
